{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 33,
  "lineage": "5e718107-49d2-0dc0-8aad-4db5560334ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:vpc/vpc-0f6ef5f9341795cb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8d6eaa538fd5d42",
            "default_route_table_id": "rtb-0380eab27fb514ecc",
            "default_security_group_id": "sg-073282e5c98e33a4d",
            "dhcp_options_id": "dopt-f7597791",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f6ef5f9341795cb6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0380eab27fb514ecc",
            "owner_id": "718122351819"
          }
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e734ed748b5868e5",
            "domain": "vpc",
            "id": "eipalloc-0e1b2ffac24933066",
            "network_interface": "eni-01184d028d9e106bf",
            "private_dns": "ip-10-0-0-186.eu-west-1.compute.internal",
            "private_ip": "10.0.0.186",
            "public_dns": "ec2-54-195-53-247.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.53.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1b2ffac24933066",
            "id": "nat-0b46d180aa8914d8f",
            "network_interface_id": "eni-01184d028d9e106bf",
            "private_ip": "10.0.0.186",
            "public_ip": "54.195.53.247",
            "subnet_id": "subnet-0fd74b07eedcf6c07"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.nat.aws_eip.nat_gw_eip",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dd54b86605f3282e",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b46d180aa8914d8f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table for NAT-ed subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.nat.aws_eip.nat_gw_eip",
            "module.deployment_multipleAZ.module.nat.aws_nat_gateway.nat_gateway",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f78b6da0f5e64bfa",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e9df8b03fb6b378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1cf6885a89abfc7",
            "route_table_id": "rtb-0f78b6da0f5e64bfa",
            "subnet_id": "subnet-0fd74b07eedcf6c07"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.route_table.aws_route_table.vpc_rt",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:718122351819:instance/i-0c5f3dc64f51437f4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5f3dc64f51437f4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c2edc24e3863db62",
            "private_dns": "ip-10-0-0-202.eu-west-1.compute.internal",
            "private_ip": "10.0.0.202",
            "public_ip": "54.72.74.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-066460a3518804fb1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd74b07eedcf6c07",
            "tags": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fc81cca052567ea"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:718122351819:instance/i-0750059387855fd6f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0750059387855fd6f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02ef1d1d2d739c3e9",
            "private_dns": "ip-10-0-1-128.eu-west-1.compute.internal",
            "private_ip": "10.0.1.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c55a656d29b33347",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a803d22755f57637",
            "tags": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025621d472b5639f6"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.private_subnet",
            "module.networking.aws_security_group.sg_priv"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0a803d22755f57637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a803d22755f57637",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[0].module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0fd74b07eedcf6c07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fd74b07eedcf6c07",
            "map_public_ip_on_launch": true,
            "owner_id": "718122351819",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01633ea58476d40ab",
            "domain": "vpc",
            "id": "eipalloc-006fb9c3745b63952",
            "network_interface": "eni-0a00cf7ed37686c87",
            "private_dns": "ip-10-0-2-68.eu-west-1.compute.internal",
            "private_ip": "10.0.2.68",
            "public_dns": "ec2-52-213-130-162.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.213.130.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006fb9c3745b63952",
            "id": "nat-06b509a8c6268c6a3",
            "network_interface_id": "eni-0a00cf7ed37686c87",
            "private_ip": "10.0.2.68",
            "public_ip": "52.213.130.162",
            "subnet_id": "subnet-0d1040ae22739a0a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.nat.aws_eip.nat_gw_eip",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02d5c5c9ba0d33a8d",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b509a8c6268c6a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table for NAT-ed subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.nat.aws_eip.nat_gw_eip",
            "module.deployment_multipleAZ.module.nat.aws_nat_gateway.nat_gateway",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0744d1289200d3b43",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e9df8b03fb6b378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf60293631a2b81c",
            "route_table_id": "rtb-0744d1289200d3b43",
            "subnet_id": "subnet-0d1040ae22739a0a0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.route_table.aws_route_table.vpc_rt",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:718122351819:instance/i-03130179af501a05c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03130179af501a05c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0669a9b8f0e648a7c",
            "private_dns": "ip-10-0-2-222.eu-west-1.compute.internal",
            "private_ip": "10.0.2.222",
            "public_ip": "54.171.111.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ab54c58b39a307bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1040ae22739a0a0",
            "tags": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fc81cca052567ea"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:718122351819:instance/i-096b0ce14bf92574a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096b0ce14bf92574a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0befd29b2d08d3a30",
            "private_dns": "ip-10-0-3-164.eu-west-1.compute.internal",
            "private_ip": "10.0.3.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01660fc737aaa25d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e25992fb70127ea",
            "tags": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025621d472b5639f6"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.private_subnet",
            "module.networking.aws_security_group.sg_priv"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-08e25992fb70127ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08e25992fb70127ea",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[1].module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0d1040ae22739a0a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d1040ae22739a0a0",
            "map_public_ip_on_launch": true,
            "owner_id": "718122351819",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fbea92f58bd6f910",
            "domain": "vpc",
            "id": "eipalloc-011ec0b5bcd7001c5",
            "network_interface": "eni-0f81d6036d2c67eef",
            "private_dns": "ip-10-0-4-31.eu-west-1.compute.internal",
            "private_ip": "10.0.4.31",
            "public_dns": "ec2-54-216-222-185.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.222.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011ec0b5bcd7001c5",
            "id": "nat-040218081358cdccd",
            "network_interface_id": "eni-0f81d6036d2c67eef",
            "private_ip": "10.0.4.31",
            "public_ip": "54.216.222.185",
            "subnet_id": "subnet-0e7b09338b2e26b2a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.nat.aws_eip.nat_gw_eip",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0644956b2822d7f98",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-040218081358cdccd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table for NAT-ed subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.nat.aws_eip.nat_gw_eip",
            "module.deployment_multipleAZ.module.nat.aws_nat_gateway.nat_gateway",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02781c08126a2e40a",
            "owner_id": "718122351819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e9df8b03fb6b378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e390a6bf26d81dbe",
            "route_table_id": "rtb-02781c08126a2e40a",
            "subnet_id": "subnet-0e7b09338b2e26b2a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.route_table.aws_route_table.vpc_rt",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:718122351819:instance/i-0f07e5bbae489f2b2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f07e5bbae489f2b2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d739999086fe5be2",
            "private_dns": "ip-10-0-4-117.eu-west-1.compute.internal",
            "private_ip": "10.0.4.117",
            "public_ip": "3.250.123.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05de0b8b9d9b74acc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7b09338b2e26b2a",
            "tags": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fc81cca052567ea"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.public_subnet",
            "module.networking.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb3fad3c0286ebd5",
            "arn": "arn:aws:ec2:eu-west-1:718122351819:instance/i-00173b8d489d5ab46",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00173b8d489d5ab46",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08cb530d1411a904a",
            "private_dns": "ip-10-0-5-190.eu-west-1.compute.internal",
            "private_ip": "10.0.5.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dd5cdda115d86509",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0588cefe8d3026223",
            "tags": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025621d472b5639f6"
            ]
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones",
            "module.deployment_multipleAZ.module.subnets.aws_subnet.private_subnet",
            "module.networking.aws_security_group.sg_priv"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0588cefe8d3026223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0588cefe8d3026223",
            "map_public_ip_on_launch": false,
            "owner_id": "718122351819",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.deployment_multipleAZ[2].module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:subnet/subnet-0e7b09338b2e26b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e7b09338b2e26b2a",
            "map_public_ip_on_launch": true,
            "owner_id": "718122351819",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:internet-gateway/igw-01e9df8b03fb6b378",
            "id": "igw-01e9df8b03fb6b378",
            "owner_id": "718122351819",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:security-group/sg-05fc81cca052567ea",
            "description": "allow web inbound http traffic to flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fc81cca052567ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Load balancer port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "718122351819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:718122351819:security-group/sg-025621d472b5639f6",
            "description": "private subnet sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025621d472b5639f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.2.0/24",
                  "10.0.4.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private subnet sg",
            "name_prefix": "",
            "owner_id": "718122351819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6ef5f9341795cb6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}